--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//apps/public/footer.html=UTF-8
+encoding//apps/public/header.html=UTF-8
+encoding//apps/public/navigation_list_goods.html=UTF-8
 encoding/<project>=UTF-8
