--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,5 @@
 
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule ^index.php?q=(.*)$ index.php?/index/index/q [QSA,PT,L]
-  RewriteRule ^(.*)$ index.php?/$1 [QSA,PT,L]
+  RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
 </IfModule>
