--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,8 @@
   RewriteRule goods/getItemUrl/([0-9]*)  /index.php/keyWords/Keyword/getItemUrl?itemId=$1 [NC]
   RewriteRule indexcate/([0-9]*).html  /index.php/Index/Index/indexcate?id=$1 [NC]
   RewriteRule indexcate/getIndexCateUrl/([0-9]*)  /index.php/Index/Index/getIndexCateUrl?id=$1 [NC]
+  
+  RewriteRule try/([0-9]*).html  /index.php/tryOut/Articlecontroller/item?id=$1 [NC]
   #RewriteRule index.php?q=(.*)$  /index.php/keyWords/Keyword/q=$1
   #RewriteRule index.php(.?) /index.php/keyWords/Keyword/q 
 </IfModule>
