--- a/.htaccess
+++ b/.htaccess
@@ -13,4 +13,7 @@
   
   #RewriteRule index.php?q=(.*)$  /index.php/keyWords/Keyword/q=$1
   #RewriteRule index.php(.?) /index.php/keyWords/Keyword/q 
+  
+  RewriteCond %{QUERY_STRING} ^q=.+$
+  RewriteRule ^index\.php$ /index.php/keyWords/Keyword/q [QSA,R]
 </IfModule>
