--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//apps/public/advertisement.html=UTF-8
 encoding//apps/public/footer.html=UTF-8
 encoding//apps/public/header.html=UTF-8
 encoding//apps/public/navigation_list_goods.html=UTF-8
