--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,10 @@
   RewriteRule try/([0-9]*).html$  /index.php/tryOut/Articlecontroller/item?id=$1 [NC]
   RewriteRule try/([0-9]*)_([0-9]*).html$  /index.php/tryOut/Articlecontroller/lists?cateId=$1&page=$2 [NC]
   
+  RewriteRule buyinventory/([0-9]*).html$  /index.php/buyinventory/Buyinventory/item?id=$1 [NC]
+  RewriteRule buyinventory/([0-9]*)_([0-9]*).html$  /index.php/buyinventory/Buyinventory/lists?cateId=$1&page=$2 [NC]
+  
+  
   #RewriteRule index.php?q=(.*)$  /index.php/keyWords/Keyword/q=$1
   #RewriteRule index.php(.?) /index.php/keyWords/Keyword/q 
   
